--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="save_image">SAVE</string>
     <string name="selected_image">Selected Image</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="google_map_api_key">AIzaSyCZCNN3fZfcO344W3ct3JhzljMxk8tY_y4</string>
 </resources>
